--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ services:
 
 before_install:
   - docker build -t superclass2016/docker-react -f Dockerfile.dev .
-  
+
+script:
+  - docker run -e CI=true superclass2016/docker-react npm run test
